--- a/src/app/pages/settings/settings-page/settings-page.component.html
+++ b/src/app/pages/settings/settings-page/settings-page.component.html
@@ -12,10 +12,12 @@
   <ion-row class="ion-justify-content-center">
     <ion-col size="auto">
       <div class="button-group">
-        <ion-button (click)="saveSqlDatabaseAsJSON()">{{
-          'SETTINGS.BUTTONS.CREATE_BACKUP' | transloco
+        <ion-button (click)="saveSqlDatabaseAsJSON()"
+          >{{ 'SETTINGS.BUTTONS.CREATE_BACKUP' | transloco }}
+        </ion-button>
+        <ion-button (click)="loadDatabaseJSON()">{{
+          'SETTINGS.BUTTONS.IMPORT_BACKUP' | transloco
         }}</ion-button>
-        <ion-button>{{ 'SETTINGS.BUTTONS.IMPORT_BACKUP' | transloco }}</ion-button>
       </div>
     </ion-col>
   </ion-row>
