--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,15 +13,17 @@
   ion-button:first-child {
     --border-radius: 4px 0 0 4px;
     margin-right: 0;
-    --box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    --box-shadow:
+      0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+      0 1px 5px 0 rgba(0, 0, 0, 0.12);
   }
 
   ion-button:last-child {
     --border-radius: 0 4px 4px 0 !important;
     margin-left: 0;
-    --box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    --box-shadow:
+      0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+      0 1px 5px 0 rgba(0, 0, 0, 0.12);
   }
 
   ion-button:not(:first-child):not(:last-child) {
