Initial multi picture support

--- a/src/app/formly/types/picture-picker/picture-picker.component.html
+++ b/src/app/formly/types/picture-picker/picture-picker.component.html
@@ -1,8 +1,8 @@
-<ion-button expand="block" (click)="pickImage()">
+<ion-button (click)="pickImage()" expand="block">
   @if (!formControl.value) {
     <ion-icon slot="start" name="add"></ion-icon>
     {{ 'GLOBAL.PICK_IMAGE' | transloco }}
   } @else {
-    <ion-img [alt]="" [src]="`data:image/jpeg;base64, ${formControl.value}`"></ion-img>
+    <ion-img [alt]="" [src]="`data:image/jpeg;base64, ${formControl.value.picture}`"></ion-img>
   }
 </ion-button>
